# CHIP-8-Emulator

./: .gitignore  CMakeLists.txt  Chip8.cpp  Chip8.hpp  CmakeLists.txt  Platform.cpp  Platform.hpp  README.md  main.cpp
src/: Platform.hpp  main.cpp
